refactor: crear DTOs tipados para peticiones de rutinas y eliminar duplicidades en el controlador